# software_renderer

./: CMakeLists.txt
src/: main.c  platform.h
src/platform/: internal.h  platform.c  win32_platform.c  wl_platform.c  wl_platform.h  x11_platform.c  x11_platform.h
